<resources>
    <string name="app_name">Car Bazar</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="write_your_email_here">Enter your email here</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="save_changes">Save Changes</string>
    <string name="sign_out">Sign Out</string>
    <string name="joined">Joined</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="price">Price</string>
    <string name="year">Year</string>
    <string name="details">Details</string>
    <string name="location">Location</string>
    <string name="ar_vr">AR/VR</string>
    <string name="bmw">BMW</string>
    <string name="porsch">Porsch</string>
    <string name="mercedes_benz">Mercedes Benz</string>
    <string name="elantra">Elentra</string>
    <string name="olx_ads">OLX Ads</string>
    <string name="pakwheels_ads">PakWheels Ads</string>
    <string name="pkmotors_ads">PKMotors Ads</string>
    <string name="car_information">Car Information</string>
    <string name="title">Title *</string>
    <string name="location1">Location *</string>
    <string name="SM">Select Make</string>
    <string name="SelectModel">Select Model</string>
    <string name="year1">Year *</string>
    <string name="RegCity">Registration City</string>
    <string name="selectYear">Select Year</string>
    <string name="mileage">Mileage *</string>
    <string name="price_information">Price Information</string>
    <string name="price1">Price *</string>
    <string name="description">Description *</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="additional_information">Additional Information</string>
    <string name="ET">Engine Type</string>
    <string name="Tran">Transmission</string>
    <string name="assembly">Assembly</string>
    <string name="engine_capacity_cc">Engine Capacity (cc) *</string>
    <string name="post1">Post</string>
    <string name="ExtColor">Exterior Color</string>
    <string name="city">City *</string>
    <string name="scity">Select City *</string>
    <string name="kmDriven">KM Driven</string>
    <string name="to">to</string>
    <string name="kms_driven">KMs Driven</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="loc">Select Location</string>
    <string name="smmm">Select Make</string>
    <string name="apply">Apply</string>
    <string name="chatbot">Chatbot</string>
    <string name="assistant_is_typing">Assistant is typing...</string>
    <string name="assistant">Assistant</string>
    <string name="ar_model_name">AR Model Name</string>
    <string name="view_in_ar">View in AR</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="name_of_user">Name of User</string>
    <string name="comment">Comment</string>
    <string name="carbazar_ads">CarBazar Ads</string>
    <string name="posted_by">Posted By:</string>
    <string name="poster">poster</string>
    <string name="rs_300_000_000">RS 300,000,000</string>
    <string name="dateee">Date</string>
    <string name="details1">Details</string>
    <string name="make1">MAKE</string>
    <string name="model1">Model</string>
    <string name="year2">YEAR</string>
    <string name="kms_driven11">KMS DRIVEN</string>
    <string name="engine_type2">ENGINE TYPE</string>
    <string name="registered_in2">REGISTERED IN</string>
    <string name="transmission2">TRANSMISSION</string>
    <string name="engine_capacity2">ENGINE CAPACITY</string>
    <string name="assembly2">ASSEMBLY</string>
    <string name="description2">Description</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="seller_profile">Seller Profile</string>
    <string name="un">User Name</string>
    <string name="view_profile2"><![CDATA[View Profile  ->]]></string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="message">Message</string>
    <string name="cond">Condition</string>
    <string name="engine_capacity_cc3">Engine Capacity (cc)</string>
    <string name="post_buyer_ad">Post Buyer Ad</string>
    <string name="my_ads1">My Ads</string>
    <string name="role2">Role</string>
    <string name="following">FOLLOWING</string>
    <string name="follow">Follow</string>
    <string name="followers">FOLLOWERS</string>
    <string name="ads2">Ads</string>
    <string name="buyer_ads">Buyer Ads</string>
    <string name="view_and_edit_profile"><![CDATA[View and Edit Profile ->]]></string>
    <string name="edit_profile1">Edit Profile</string>
    <string name="report_user">Report User</string>
    <string name="saved_ads1">Saved Ads</string>
    <string name="p1">Privacy</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_guidelines"><![CDATA[Help & Guidelines]]></string>
    <string name="rate_app">Rate App</string>
    <string name="reality_car_models">Reality Car Models</string>
    <string name="rcm_guide1">In android application of carbazar user get number of 3D car models that they
        can place in their own environment. To work with these models user have to follow some simple steps:
        \n\n1. Tap on View in AR tab.
        \n2. Select their desired model.
        \n3. Press view in AR button.
        \n\nAnd yes you\'re over there to get a real feel of your car in your own room or garage.
        \n\nCar Bazar gives you an ability to play with your dream car, you can adjust in your surroundings according to your needs. You\'re given simple looking buttons to zoom in, zoom out or move in real world as needed.</string>
    <string name="seller_ads3">Seller Ads</string>
    <string name="sa_guide1">Seller ads in Car Bazar allows cars sellers to post what they want to show to the users out there. it helps them target a large audience. Car Bazar gives its users and oppertunity to sell their cars by providing all the details they can. Car Bazar has an easy to understand user interface, through which it\'s easy for sellers to tell the buyers what they want to sell, and for buyers all information on one place. \n\nTo post a seller ad, you can: \n1. Tap on the post an ad button. \n2. In the car information page add a suitable title \n3. Select your city(So that buyers can contact you only if you are the best possible approachable solution) \n4. Select the registration city of your car \n5. Select the year of make \n6. Select how many miles are driven on this car(If you are selling a used car) \n7. Select the exterior paint color of the car \n8. Add the price you are demaning \n9. A little description about this car model \n10. Upload as many pictures of your loving car(An optional video can also be added) \n\nIn the additional Information panel, you can also add: \n11. Select the engine type \n12. Select transmission(Automated or manual) \n13. Select the assembly of your car model \n14. Select engine capacity in cc \n\nPress on the post button and there you go ;) your ad will be posted to the audience out there in seconds. \n\nWhile posting an ad you must be aware of the policies of Car Bazar in case of fake ad you might get your account banned permanently.</string>
    <string name="chat_me">Chat Me</string>
    <string name="cm_guide1">Car Bazar provides the solution for all of your problems while selling or buying of the cars. Car bazar has a 24/7 available virtual reprentative to answer all of your queries within seconds. You can ask anything from it, and get the result within seconds of Frequently asked questions. \n\nCar Bazar chatMe can give information regarding any problem you might face while you are stuck in the usage of system, and also information regarding any car from the trusted sources.</string>
    <string name="special_offers_and_communications">Special Offers and Communications</string>
    <string name="receive_updates_offers_surveys_and_more">Receive updates, offers, surveys\nand more</string>
    <string name="recommendations1">Recommendations</string>
    <string name="based_on_your_activity">Based on your activity</string>
    <string name="show_my_phone_number_in_ads">Show My Phone Number in Ads</string>
    <string name="change_password1">Change Password</string>
    <string name="np2">New Password</string>
    <string name="info_carbazar_com">info@carbazar.com</string>
    <string name="cui_park_road_islamabad">CUI, Park Road Islamabad.</string>
    <string name="_92_331_7354483">+92 331 7354483</string>
    <string name="message_us">Message us</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="instructions">Instructions</string>
    <string name="inst_vr">1. Please connect your mobile phone with the\n\t\t\tBluetooth controller. \n2. Insert your mobile phone into the VR box. \n3. Look down to move forward. \n4. Look right down to move in right direction. \n5. Loom left down to move in left direction.</string>
    <string name="view_app_in_vr">View App in VR</string>
    <string name="view_in_vr">View in VR</string>
    <string name="virtual_reality_tour">Virtual Reality Tour</string>
    <string name="add_a_video">Add a Video</string>
    <string name="upload_a_photo">Upload a Photo</string>
    <string name="show_phone_number">Show Phone Number</string>
    <string name="buyers_ads">Buyers Ads</string>
    <string name="eod">Edit or Delete</string>
    <string name="condition">Condition</string>
    <string name="usedS">Used</string>
    <string name="edit_ad12">Edit Ad</string>
    <string name="publo">Publish Ad</string>
    <string name="preview_ad">Preview Ad</string>
    <string name="priceRAnge">Price Range</string>
    <string name="buyer_profile">Buyer Profile</string>
    <string name="contact_buyer">Contact Buyer</string>
    <string name="personal_information">Personal Information</string>
    <string name="company_information">Company Information</string>
    <string name="company_name">Company Name</string>
    <string name="company_phone">Company Phone</string>
    <string name="sign_up_as_dealer">Sign up as Dealer</string>
    <string name="car_recommendations">Car Recommendations</string>
    <string name="write_a_review">Write a Review</string>
    <string name="ask_review_str">Our recommendations are based on the reviews that are provided by the Carbazar users on different cars.</string>
    <string name="write_review">Write Review</string>
    <string name="find_recommendations">Find Recommendations</string>
    <string name="what_do_you_need">What do you need?</string>
    <string name="best_model">Best Model</string>
    <string name="best_brand_make">Best Brand</string>
    <string name="best_mileage">Best Mileage</string>
    <string name="price_range">Price Range</string>
    <string name="car_m_m_v">Car M M V</string>
    <string name="likes">Likes</string>
    <string name="total_reviews">Total Reviews</string>
    <string name="ratings">Ratings</string>
    <string name="brand">Brand</string>
    <string name="price_value">Price</string>
    <string name="mileage2">Mileage</string>
    <string name="rcar">Recommended Car</string>
    <string name="sv2">select version</string>
</resources>